# lib/db/src/schema/index.ts
@@ -1,1 +1,3 @@
 export * from "./contacts";
+export * from "./conversations";
+export * from "./messages";
